fix(codegen): format string should use %n rather than \n